examples/simple/undefined/UB-CCV12-bad.c
#include<float.h>
int main() {
  float x = FLT_MAX;
  x = x * 2.0f;
  return 0;
}
